Update h2 and title style. Fix modal title align with close button.

--- a/src/client/src/components/RightSidebar/styles.module.css
+++ b/src/client/src/components/RightSidebar/styles.module.css
@@ -58,7 +58,7 @@
 
 .titleContainer {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
 }
 
