--- a/src/client/src/components/Titles/Title/styles.module.css
+++ b/src/client/src/components/Titles/Title/styles.module.css
@@ -1,3 +1,4 @@
 .title {
-  font-weight: normal;
+  font-weight: lighter;
+  margin-bottom: 1em;
 }
