--- a/src/client/src/modals/CosmosDbModal/styles.module.css
+++ b/src/client/src/modals/CosmosDbModal/styles.module.css
@@ -1,8 +1,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin-bottom: 1em;
+  align-items: baseline;
 }
 
 /* scrollable part of the form */
