--- a/src/client/src/modals/PlatformRequirementsModal/styles.module.css
+++ b/src/client/src/modals/PlatformRequirementsModal/styles.module.css
@@ -1,7 +1,7 @@
 .headerContainer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 
 .cancelIcon {
