--- a/src/client/src/modals/ViewLicensesModal/styles.module.css
+++ b/src/client/src/modals/ViewLicensesModal/styles.module.css
@@ -6,7 +6,7 @@ ul {
 .headerContainer {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 
 .cancelIcon {
